--- a/WAPI_practica_integradora/appsettings.json
+++ b/WAPI_practica_integradora/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "gymConnection": "Server=DESKTOP-MP5HANB\\AGG; Database= gym_practica_integradora; Trusted_Connection=True; TrustServerCertificate=True;MultipleActiveResultSets=True"
+    "gymConnection": "Server=DESKTOP-MP5HANB\\AGG; Database= gym_practica_integradora; Trusted_Connection=True; TrustServerCertificate=True;MultipleActiveResultSets=True; User=sa; Password=sqlSA%"
   }
 }
